...
"Default" = "Default";

"Default payment method" = "Default payment method";

"Did you mean %@? %@." = "Did you mean %1$@? %2$@.";

"Discard Changes" = "Discard Changes";

"Discard changes?" = "Discard changes?";

"Discount" = "Discount";

"EPS Bank" = "EPS Bank";

"Edit address" = "Edit address";

"Enter address manually" = "Enter address manually";

"Exchange rate and fees of your bank may apply." = "Exchange rate and fees of your bank may apply.";

"FPX Bank" = "FPX Bank";

"Fast, secure checkout" = "Fast, secure checkout";
...
"SEPA debit details cannot be changed." = "SEPA debit details cannot be changed.";

"Save" = "Save";

"Save a new payment method" = "Save a new payment method";

"Save address" = "Save address";

"Save for future payments" = "Save for future payments";

"Save my info for faster checkout with %@" = "Save my info for faster checkout with %@";

"Save payment details to %@ for future purchases" = "Save payment details to %@ for future purchases";
...
"Unavailable for this purchase" = "Unavailable for this purchase";

"Update card" = "Update card";

"Update payment method" = "Update payment method";

"Use billing address for shipping" = "Use billing address for shipping";

"View more" = "View more";

"Yes, update" = "Yes, update";

"Your IBAN should start with a two-letter country code." = "Your IBAN should start with a two-letter country code.";
...
